; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/catalog/extr_objectaccess.c_RunObjectPostCreateHook.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/catalog/extr_objectaccess.c_RunObjectPostCreateHook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@OAT_POST_CREATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RunObjectPostCreateHook(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_3__, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = call i32 @Assert(i32 1)
  %11 = call i32 @memset(%struct.TYPE_3__* %9, i32 0, i32 4)
  %12 = load i32, i32* %8, align 4
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  store i32 %12, i32* %13, align 4
  %14 = load i32, i32* @OAT_POST_CREATE, align 4
  %15 = load i32, i32* %5, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %7, align 4
  %18 = bitcast %struct.TYPE_3__* %9 to i8*
  %19 = call i32 @object_access_hook(i32 %14, i32 %15, i32 %16, i32 %17, i8* %18)
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @object_access_hook(i32, i32, i32, i32, i8*) #1

declare dso_local i32 @memset(%struct.TYPE_3__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
